# overheard

./: .gitignore  README.md  build_app.sh  pyproject.toml  setup.py
icon/: build_icon.sh  overheard.icns
scripts/: setup-macos.sh
src/overheard/: __init__.py  app.py  audio.py  cal.py  calendar.py  config.py  details_panel.py  meeting.py  popover.py  preferences.py  transcribe.py  transport.py
